--- a/bmi.html
+++ b/bmi.html
@@ -15,8 +15,9 @@
     <input type="number" id="height" placeholder="Type your height in meters (only numbers)">
     <!-- The button to activate the script -->
     <button type="button" onclick="calculate()"> Calculate </button>
-    <!--Show the answer: -->
+    <!--Show the answers: -->
     <p id="answer"></p>
+    <p id="answer2"></p>
     <!--Scrripts-->
     <script src="bmi.js"></script>
 </body>
