--- a/bmi.html
+++ b/bmi.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculate your BMI</title>
+    <!--CSS-->
+    <link rel="stylesheet" href="bmi.css" type="text/css" />
 </head>
 <body>
     <h2>This is a page that calculates your Body Mass Index (BMI)</h2>
-    <!-- Take mass -->
-    <p>Put your mass (in kg):</p> 
-    <input type="number" id="mass" placeholder="Type your mass (only numbers)"/>
-    <!-- Take the height -->
-    <p>Now your height (in meters):</p>
-    <input type="number" id="height" placeholder="Type your height in meters (only numbers)">
-    <!-- The button to activate the script -->
-    <button type="button" onclick="calculate()"> Calculate </button>
+    <form action="#">
+        <!-- Take mass -->
+        <p>Put your mass (in kg):</p> 
+        <input type="number" id="mass" placeholder="Type your mass (only numbers)"/>
+        <!-- Take the height -->
+        <p>Now your height (in meters):</p>
+        <input type="number" id="height" placeholder="Type your height in meters (only numbers)">
+        <!-- The button to activate the script -->
+        <button type="button" onclick="calculate()"> Calculate </button>
+    </form>
     <!--Show the answers: -->
-    <p id="answer"></p>
-    <p id="answer2"></p>
+    <p id="answer">Answer1</p>
+    <p id="answer2">Answer2</p>
     <!--Scrripts-->
     <script src="bmi.js"></script>
 </body>
