--- a/bmi.html
+++ b/bmi.html
@@ -11,11 +11,11 @@
     <h2>This is a page that calculates your Body Mass Index (BMI)</h2>
     <form action="#">
         <!-- Take mass -->
-        <p>Put your mass (in kg):</p> 
-        <input type="number" id="mass" placeholder="Type your mass (only numbers)"/>
+        <label for="mass"> Put your mass (in kg): </label> 
+        <input type="number" id="mass" placeholder="Type only numbers" />
         <!-- Take the height -->
-        <p>Now your height (in meters):</p>
-        <input type="number" id="height" placeholder="Type your height in meters (only numbers)">
+        <label for="height"> Now your height (in meters): </label>
+        <input type="number" id="height" placeholder="Type only numbers" />
         <!-- The button to activate the script -->
         <button type="button" onclick="calculate()"> Calculate </button>
     </form>
