--- a/bmi.html
+++ b/bmi.html
@@ -20,8 +20,10 @@
         <button type="button" onclick="calculate()"> Calculate </button>
     </form>
     <!--Show the answers: -->
-    <p id="answer">Answer1</p>
-    <p id="answer2">Answer2</p>
+    <div class="answers">
+        <p id="answer">Answer1</p>
+        <p id="answer2">Answer2</p>
+    </div>
     <!--Scrripts-->
     <script src="bmi.js"></script>
 </body>
