--- a/bmi.html
+++ b/bmi.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculate your BMI</title>
-    <!--CSS-->
-    <link rel="stylesheet" href="bmi.css" type="text/css" />
-</head>
-<body>
-    <h2>This is a page that calculates your Body Mass Index (BMI)</h2>
-    <form action="#">
-        <!-- Take mass -->
-        <label for="mass"> Put your mass (in kg): </label> 
-        <input type="number" id="mass" placeholder="Type only numbers" />
-        <!-- Take the height -->
-        <label for="height"> Now your height (in meters): </label>
-        <input type="number" id="height" placeholder="Type only numbers" />
-        <!-- The button to activate the script -->
-        <button type="button" onclick="calculate()"> Calculate </button>
-    </form>
-    <!--Show the answers: -->
-    <div class="answers">
-        <p id="answer">Answer1</p>
-        <p id="answer2">Answer2</p>
-    </div>
-    <!--Scrripts-->
-    <script src="bmi.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Calculate your BMI</title>
+        <!--CSS-->
+        <link rel="stylesheet" href="bmi.css" type="text/css" />
+    </head>
+    <body>
+        <h2>This is a page that calculates your Body Mass Index (BMI)</h2>
+        <form action="#">
+            <!-- Take mass -->
+            <label for="mass"> Put your mass (in kg): </label> 
+            <input type="number" id="mass" placeholder="Type only numbers" />
+            <!-- Take the height -->
+            <label for="height"> Now your height (in meters): </label>
+            <input type="number" id="height" placeholder="Type only numbers" />
+            <!-- The button to activate the script -->
+            <button type="button" onclick="calculate()"> Calculate </button>
+        </form>
+        <!--Show the answers: -->
+        <div id="answers" class="notDisplaying">
+            <p id="answer">Answer1</p>
+            <p id="answer2">Answer2</p>
+        </div>
+        <!--Scrripts-->
+        <script src="bmi.js"></script>
+    </body>
 </html>
