--- a/bmi.html
+++ b/bmi.html
@@ -8,8 +8,14 @@
         <link rel="stylesheet" href="bmi.css" type="text/css" />
     </head>
     <body>
-        <h2>This is a page that calculates your Body Mass Index (BMI)</h2>
+        <h2>
+            This is a page that calculates your Body Mass Index (BMI) and displays other
+            important data
+        </h2>
         <form action="#">
+            <!-- Take name -->
+            <label for="name"> Type your name here: </label> 
+            <input type="text" id="name" placeholder="Your name goes here" />
             <!-- Take mass -->
             <label for="mass"> Put your mass (in kg): </label> 
             <input type="number" id="mass" placeholder="Type only numbers" />
