--- a/html/retirement.html
+++ b/html/retirement.html
@@ -3,31 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Calculate your BMI</title>
+        <title>Retirement</title>
         <!--CSS-->
-        <link rel="stylesheet" href="bmi.css" type="text/css" />
+        <link rel="stylesheet" href="../css/bmi.css" type="text/css" />
     </head>
     <body>
         <h2>
-            This is a page that calculates your Body Mass Index (BMI) and displays other
-            important data
+            This is a page that says if you can retire
         </h2>
         <form action="#">
             <!-- Take name -->
             <label for="name"> Type your name here: </label> 
             <input type="text" id="name" placeholder="Your name goes here" />
-            
-            <!-- BMI -->
-            <h3>BMI calculation</h3>
-            <!-- Take mass -->
-            <label for="mass"> Put your mass (in kg): </label> 
-            <input type="number" id="mass" placeholder="Type only numbers" />
-            <!-- Take the height -->
-            <label for="height"> Now your height (in meters): </label>
-            <input type="number" id="height" placeholder="Type only numbers" />
 
             <!--Retirement-->
-            <h3>Data refering to retirement</h3>
             <!-- Age -->
             <label for="age"> How old are you? (in years) </label> 
             <input type="number" id="age" placeholder="Type only numbers" />
@@ -45,13 +34,9 @@
         </form>
         <!--Show the answers: -->
         <div id="answers" class="notDisplaying">
-            <h3>BMI Information</h3>
-            <p id="answer">Answer1</p>
-            <p id="answer2">Answer2</p>
-            <h3>Retirement Answer</h3>
             <p id="answer3">Answer3</p>
         </div>
         <!--Scrripts-->
-        <script src="bmi.js"></script>
+        <script src="../js/bmi.js"></script>
     </body>
 </html>
