Adding a script file for the retirement page and linking the pages

--- a/html/bmi.html
+++ b/html/bmi.html
@@ -12,6 +12,7 @@
             This is a page that calculates your Body Mass Index (BMI) and displays other
             important data
         </h2>
+        <a href="retirement.html"> Go to retirement page </a>
         <form action="#">
             <!-- Take name -->
             <label for="name"> Type your name here: </label> 
