--- a/html/retirement.html
+++ b/html/retirement.html
@@ -9,8 +9,9 @@
     </head>
     <body>
         <h2>
-            This is a page that says if you can retire
+            This is a page that says whether you can retire
         </h2>
+        <a href="bmi.html"> Calculate your Body Mass Index (BMI) </a>
         <form action="#">
             <!-- Take name -->
             <label for="name"> Type your name here: </label> 
