Fixing some errors

--- a/html/bmi.html
+++ b/html/bmi.html
@@ -35,10 +35,8 @@
             <h3>BMI Information</h3>
             <p id="answer">Answer1</p>
             <p id="answer2">Answer2</p>
-            <h3>Retirement Answer</h3>
-            <p id="answer3">Answer3</p>
         </div>
-        <!--Scrripts-->
+        <!--Scripts-->
         <script src="../js/bmi.js"></script>
     </body>
 </html>
