--- a/html/retirement.html
+++ b/html/retirement.html
@@ -31,13 +31,13 @@
                 <input type="radio" name="gender" value="female" /> Female
             </div>
             <!-- The button to activate the script -->
-            <button type="button" onclick="calculate()"> Calculate </button>
+            <button type="button" onclick="show()"> Calculate </button>
         </form>
         <!--Show the answers: -->
         <div id="answers" class="notDisplaying">
             <p id="answer3">Answer3</p>
         </div>
         <!--Scrripts-->
-        <script src="../js/bmi.js"></script>
+        <script src="../js/retirement.js"></script>
     </body>
 </html>
